Added icons, hover effect and updated login/sign up page

--- a/server/frontend/src/styles/Rating.css
+++ b/server/frontend/src/styles/Rating.css
@@ -5,3 +5,13 @@
 .bi {
   margin: 1rem;
 }
+
+.favButton {
+  border: none;
+  background: none;
+}
+
+.toWatchButton {
+  border: none;
+  background: none;
+}
