--- a/server/frontend/src/styles/UserForm.css
+++ b/server/frontend/src/styles/UserForm.css
@@ -1,3 +1,7 @@
+body {
+  background-color: blanchedalmond;
+}
+
 .fullscreen {
   min-height: 100px;
   display: flex;
@@ -7,16 +11,15 @@
 }
 
 .login-screen {
-  background-color: rgba(105, 171, 241, 0.5);
   padding: 40px 30px;
   border-radius: 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   width: 600px;
+  background-color: rgba(105, 171, 241, 0.5);
 }
 
 .login-title {
   text-align: center;
-  color: blueviolet;
 }
 
 .form {
