--- a/server/frontend/src/styles/NavBar.css
+++ b/server/frontend/src/styles/NavBar.css
@@ -5,3 +5,14 @@
 i {
   padding: 5px;
 }
+
+.navbar-brand:hover {
+  color: #33ffea;
+}
+.nav-link {
+  color: black;
+}
+
+.nav-link:hover {
+  color: #33ffea;
+}
