--- a/server/frontend/src/styles/SearchBar.css
+++ b/server/frontend/src/styles/SearchBar.css
@@ -15,6 +15,8 @@
 .btn-primary:hover {
   color: #fff;
   background-color: #b36f09;
+  
+ // Overall, pages looks nice. Color for the hovered button not really align with the style though.
 }
 
 .errMsg {
